[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/story_teller/editor/scripts/TestUpdateItem.gd" type="Script" id=1]

[node name="TestUpdateItem" type="MarginContainer"]
margin_right = 285.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
DisplayView = NodePath("displayView")
DeleteView = NodePath("deleteView")
Prefix = NodePath("displayView/prefix")
HintLabel = NodePath("displayView/hintLabel")
EditButton = NodePath("displayView/editButton")
DeleteButton = NodePath("displayView/deleteButton")
ConfirmLbl = NodePath("deleteView/confirmLbl")
YesBtn = NodePath("deleteView/yesBtn")
NoBtn = NodePath("deleteView/noBtn")

[node name="displayView" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_right = 280.0
margin_bottom = 20.0
custom_constants/separation = 5

[node name="prefix" type="Label" parent="displayView"]
margin_top = 3.0
margin_right = 28.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="hintLabel" type="Label" parent="displayView"]
margin_left = 33.0
margin_top = 3.0
margin_right = 173.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "-- UNSET --"

[node name="editButton" type="Button" parent="displayView"]
margin_left = 178.0
margin_right = 214.0
margin_bottom = 20.0
text = "Edit"

[node name="deleteButton" type="Button" parent="displayView"]
margin_left = 219.0
margin_right = 274.0
margin_bottom = 20.0
text = "Delete"

[node name="deleteView" type="HBoxContainer" parent="."]
visible = false
margin_left = 5.0
margin_right = 280.0
margin_bottom = 20.0
custom_constants/separation = 5

[node name="confirmLbl" type="Label" parent="deleteView"]
margin_top = 3.0
margin_right = 201.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "delete update\"?"

[node name="yesBtn" type="Button" parent="deleteView"]
margin_left = 206.0
margin_right = 240.0
margin_bottom = 20.0
text = "Yes"

[node name="noBtn" type="Button" parent="deleteView"]
margin_left = 245.0
margin_right = 275.0
margin_bottom = 20.0
text = "No"
